Management of the account status
